# norish

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.devcontainer/: make_hostip_env_for_expo.sh
.devcontainer/default/: Dockerfile  compose.devcontainer.yaml  devcontainer.json
.github/workflows/: _docker-build.yml  _node-ci.yml  docker-build-test.yml  pr-quality.yml  rc-release-build.yml  release-build.yml
apps/mobile/: metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/mobile/src/: global.css
apps/parser-api/: package.json  pyproject.toml
apps/parser-api/app/: main.py
apps/parser-api/tests/: test_media_urls.py
apps/web/: package.json  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/__tests__/: proxy.test.ts
apps/web/app/: error.tsx  layout.tsx  not-found.tsx
apps/web/components/: register-service-worker.ts  timer-dock.tsx
apps/web/context/: archive-import-context.tsx  household-context.tsx  permissions-context.tsx  recipes-context.tsx  recipes-filters-context.tsx  user-context.tsx
apps/web/hooks/: use-amount-display-preference.ts  use-notification-permission.ts  use-recurrence-detection.ts  use-text-input-autocomplete-position.ts  use-text-trigger-autocomplete.ts  use-unit-formatter.ts  use-wake-lock.tsx
docker/: Dockerfile  compose.base.yaml  compose.local.yaml  docker-compose.example.yml
patches/: expo-widgets@55.0.7.patch
tooling/eslint/: base.ts  package.json
tooling/prettier/: package.json
tooling/tailwind/: package.json
(+691 files in other folders)
